# ID3D11

./: .gitignore  GMD3D11.resource_order  GMD3D11.yyp  ID3D11.resource_order  ID3D11.yyp  LICENSE  README.md  __d3d_enums.gml  build.ps1  gmlgen.py  package-lock.json  temp.py
binding/: CMakeLists.txt  CMakePresets.json  config.json  generate.ps1  id3d11.gmidl  patch-extension.ps1  patch-gml-defaults.ps1
binding/code_gen/native/: ID3D11Internal_exports.h  ID3D11Internal_native.cpp  ID3D11Internal_native.h
binding/probes/: CMakeLists.txt  dynamic_linkage_probe.cpp
binding/src/: CMakeLists.txt
binding/src/native/: Bootstrap.cpp  BridgeState.cpp  BridgeState.hpp  Buffer.cpp  ClassLinkage.cpp  CommandList.cpp  ContextExecution.cpp  ContextTransfer.cpp  Device.cpp  DeviceContext.cpp  DeviceContextHelpers.hpp  FormatLayout.hpp  HandleRegistry.cpp  HandleRegistry.hpp  ID3D11_native.cpp  ID3D11_native.h  InterfaceQuery.cpp  NativeHelpers.hpp  PipelineBinding.cpp  PipelineState.cpp  Query.cpp  Resource.cpp  ResourceHelpers.hpp  ResourceLayout.hpp  Shader.cpp  ShaderBinding.cpp  ShaderCompiler.cpp  ShaderStageBinding.cpp  State.cpp  Texture.cpp  View.cpp
cpp/: CMakeLists.txt
cpp/include/: OcclusionQuery.hpp  TimestampQuery.hpp  VMTHookManager.hpp  Viewport.hpp  common.hpp
cpp/include/buffers/: AppendConsumeBuffer.hpp  IndexBuffer.hpp  IndirectArgsBuffer.hpp  RawBuffer.hpp  UploadBuffer.hpp  VertexBuffer.hpp
cpp/include/pipeline/: OcclusionQuery.hpp  ScissorRect.hpp  TimestampQuery.hpp
cpp/include/shaders/: DomainShader.hpp  HullShader.hpp  ShaderUtils.hpp
cpp/include/textures/: Sampler.hpp  Texture2D.hpp  Texture3D.hpp  TextureArray.hpp
cpp/include/views/: DSV.hpp  RTV.hpp  SRV.hpp  UAV.hpp
cpp/src/: ScissorRect.cpp  TimestampQuery.cpp  Viewport.cpp  main.cpp
cpp/src/buffers/: AppendConsumeBuffer.cpp  Buffer.cpp  ComputeBuffer.cpp  ConstantBuffer.cpp  IndexBuffer.cpp  IndirectArgsBuffer.cpp  RawBuffer.cpp  ReadbackBuffer.cpp  StructuredBuffer.cpp  UploadBuffer.cpp  VertexBuffer.cpp
cpp/src/pipeline/: OcclusionQuery.cpp
cpp/src/shaders/: ComputeShader.cpp  DomainShader.cpp  GeometryShader.cpp  HullShader.cpp  PixelShader.cpp  VertexShader.cpp
cpp/src/textures/: Sampler.cpp  Texture2D.cpp  Texture3D.cpp  TextureArray.cpp
cpp/src/views/: DSV.cpp  RTV.cpp  SRV.cpp  UAV.cpp
docs/: API_COVERAGE.md  ARCHITECTURE.md  CRASH_ANALYSIS.md  NEXT_TASK_HANDOFF.md  PRESENT_PATH_STATUS.md
extensions/ID3D11/: ID3D11.yy
folders/: Examples.yy  GMD3D11.yy
folders/Examples/: Id3d11Triangle.yy
objects/OId3d11Triangle/: CleanUp_0.gml  Create_0.gml  Draw_0.gml  OId3d11Triangle.yy
objects/OMain/: Create_0.gml
options/operagx/: options_operagx.yy
options/reddit/: options_reddit.yy
options/windows/: options_windows.yy
rooms/RmId3d11Triangle/: RmId3d11Triangle.yy
rooms/RmInit/: RmInit.yy  RoomCreationCode.gml
scripts/: smoke.ps1
scripts/__d3d11/: __d3d11.gml
scripts/__d3d11_enums/: __d3d11_enums.gml  __d3d11_enums.yy
scripts/__d3d11_generated/: __d3d11_generated.gml
scripts/__d3d11_rtv/: __d3d11_rtv.gml  __d3d11_rtv.yy
scripts/__d3d11_sampler/: __d3d11_sampler.gml  __d3d11_sampler.yy
scripts/__d3d11_texture2d/: __d3d11_texture2d.gml  __d3d11_texture2d.yy
scripts/__d3d_enums/: __d3d_enums.yy
scripts/__dxgi_format/: __dxgi_format.yy
scripts/__id3d11_api/: __id3d11_api.gml  __id3d11_api.yy
scripts/__id3d11_bootstrap/: __id3d11_bootstrap.gml  __id3d11_bootstrap.yy
scripts/__id3d11_runtime/: __id3d11_runtime.gml  __id3d11_runtime.yy
scripts/yamc/: yamc.yy
sprites/SprRubberDuck/: SprRubberDuck.yy
sprites/SprVTF/: SprVTF.yy
